--- a/plugins/portfolio/public/css/global.css
+++ b/plugins/portfolio/public/css/global.css
@@ -9,7 +9,27 @@
     color: #000000 !important;
 }
 
+.redBorder {
+    border: 1px solid #cc0000 !important;
+}
+
+.noBottom {
+    bottom: 0px !important;
+    margin-bottom: 0px !important;
+}
+
 .centerImg {
     margin-left: auto;
     margin-right: auto;
+    max-height: 200px;
+}
+
+.slideRow {
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+
+.firstImg {
+    margin-left: 12%;
 }
