--- a/plugins/portfolio/templates/elements/top_menu.html
+++ b/plugins/portfolio/templates/elements/top_menu.html
@@ -16,6 +16,7 @@
             <ul class="nav navbar-nav navbar-right">
                 ^navigation^
                 ^account_buttons^
+                ^tmp_elements=search_field^
             </ul>
         </div>
     </div>
