--- a/plugins/portfolio/templates/head.html
+++ b/plugins/portfolio/templates/head.html
@@ -28,9 +28,11 @@
         <script type="text/javascript" src="^angular_sanitize_src^"></script>
         <script type="text/javascript" src="^elasticsearch_src^"></script>
         <script type="text/javascript" src="/js/media.js"></script>
+        <script type="text/javascript" src="/js/elastic.js"></script>
+        <script type="text/javascript" src="/js/elasticui.js"></script>
         ^localization_script^
         ^analytics^
     </head>
-    <body ng-controller="PencilBlueController">
+    <body ng-controller="PencilBlueController" eui-index="'courses'">
         <div id="wrap">
             ^tmp_elements=top_menu^
