--- a/plugins/pencilblue/templates/admin/site_settings/content.html
+++ b/plugins/pencilblue/templates/admin/site_settings/content.html
@@ -27,6 +27,10 @@
                         <label>^loc_READ_MORE_TEXT^</label>
                         <input type="text" class="form-control" ng-model="contentSettings.read_more_text"></input>
                     </div>
+                    <div class="form-group">
+                        <label>^loc_BOOK_NOW_TEXT^</label>
+                        <input type="text" class="form-control" ng-model="contentSettings.book_now_text"></input>
+                    </div>
                 </div>
                 <div class="tab-pane" id="timestamp">
                     <div class="form-group">
