--- a/plugins/portfolio/templates/landing_page.html
+++ b/plugins/portfolio/templates/landing_page.html
@@ -10,6 +10,15 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
+            <eui-searchbox field="'headline'"></eui-searchbox>
+<eui-singleselect field="'topic'" size="5"></eui-singleselect>
+            <h1>Results</h1>
+                <ul>
+                    <li ng-repeat="doc in indexVM.results.hits.hits">
+                        {{doc._source | json | limitTo: 500}} <!-- OPTIONAL: display more meaningful data instead of json -->
+                    </li>
+                </ul>
+                <eui-simple-paging></eui-simple-paging>
                 ^layout^
             </div>
         </div>
