--- a/plugins/portfolio/public/css/global.css
+++ b/plugins/portfolio/public/css/global.css
@@ -33,3 +33,30 @@
 .firstImg {
     margin-left: 12%;
 }
+
+.article {
+    border: solid 1px #cc0000;
+    padding: 1em;
+
+    -webkit-box-shadow: -10px 0px 0px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: -10px 0px 0px 0px rgba(0,0,0,0.75);
+    box-shadow: -3px -3px 15px -3px rgba(0,0,0,0.75);
+}
+
+.actionbtn {
+  background-color: #cc0000;
+  color: #ffffff;
+  padding: 0.6em;
+  float: right;
+  margin: 5px;
+}
+
+.navbar-default .navbar-nav>.active>a {
+    background-color: #cc0000;
+    color: #ffffff;
+}
+
+.navbar-default .navbar-nav>.active>a:hover, .navbar-default .navbar-nav>.active>a:focus {
+    background-color: #cc0000;
+    color: #000000;
+}
