--- a/plugins/portfolio/templates/index.html
+++ b/plugins/portfolio/templates/index.html
@@ -7,6 +7,7 @@
         <div class="row">
             <div id="articles" ng-class="{'col-sm-9': sideNavItems, 'col-sm-10 col-sm-offset-1': !sideNavItems}">
                 ^articles^
+                ^tmp_pb_contact_form^
             </div>
             <div class="col-sm-3" ng-if="sideNavItems">
                 ^side_nav^
