--- a/plugins/portfolio/templates/landing_page.html
+++ b/plugins/portfolio/templates/landing_page.html
@@ -9,8 +9,13 @@
 </div>
     <div class="container">
         <div class="row">
+            ^tmp_elements=accreditations^
+    </div>
+        <div class="row spacer">
             <div class="col-xs-12">
                 ^layout^
+                ^tmp_elements=call_to_action^
+                ^tmp_elements=front_photos^
                 ^tmp_elements=search_field^
                 ^tmp_elements=clients_slider^
         </div>
