--- a/plugins/portfolio/templates/elements/clients_slider.html
+++ b/plugins/portfolio/templates/elements/clients_slider.html
@@ -1,3 +1,7 @@
+<div class="row">
+<h3 class="title">Clients</h3>
+
+</div>
 <div class="clientSlide">
     <div id="ID-clientSlide" class="carousel slide" data-interval="3000" data-ride="carousel">
        <!-- Carousel items -->
