--- a/plugins/portfolio/templates/index.html
+++ b/plugins/portfolio/templates/index.html
@@ -7,19 +7,19 @@
         <div class="row">
             <div id="articles" ng-class="{'col-sm-9': sideNavItems, 'col-sm-10 col-sm-offset-1': !sideNavItems}">
                 ^articles^
-                ^tmp_pb_contact_form^
+                <!--^tmp_pb_contact_form^ -->
             </div>
             <div class="col-sm-3" ng-if="sideNavItems">
                 ^side_nav^
             </div>
-            <div ng-class="{'col-sm-9': sideNavItems, 'col-sm-10 col-sm-offset-1': !sideNavItems}">
+       <!--     <div ng-class="{'col-sm-9': sideNavItems, 'col-sm-10 col-sm-offset-1': !sideNavItems}">
                 <footer>
                     &copy; ^year^ ^site_name^
                 </footer>
-            </div>
+            </div> -->
             <div class="spacer"></div>
         </div>
     </div>
 ^infinite_scroll^
 ^angular^
-^tmp_footer_no_cp^
+^tmp_footer^
