--- a/plugins/pencilblue/templates/admin/index.html
+++ b/plugins/pencilblue/templates/admin/index.html
@@ -1,7 +1,7 @@
 ^tmp_admin=head^
 <div class="col-md-9" style="margin-top: 1em">
     <div class="alert alert-info news_alert">
-        <h3 style="margin-top: 0">PencilBlue News:</h3>
+        <h3 style="margin-top: 0">News:</h3>
         <p id="news_loader" ng-if="!newsCopy.length">
             <i class="fa fa-2x fa-spinner fa-spin"></i>
         </p>
