--- a/plugins/portfolio/templates/contact_page.html
+++ b/plugins/portfolio/templates/contact_page.html
@@ -1,24 +1,110 @@
 ^tmp_head^
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12">
-                    <div style="overflow:hidden;height:400px;width:1280px;">
-        <div id="gmap_canvas" style="height:400px;width:1280px;"></div>
-        <style>#gmap_canvas img{max-width:none!important;background:none!important}</style>
-        <a class="google-map-code" href="http://wptiger.com" id="get-map-data">wptiger.com</a>
+<div ng-class="{container: true, standalone: !hero_image}" class="container standalone mapContainer">
+    <div id='gmap-canvas'></div>
 </div>
-            </div>
+<div class="container">
+    <div class="row">
+        <div class="col-xs-12">
+            <h4 class="title">Contact information</h4>
+            <div class="col-xs-12">
+            <ul class="list-unstyled">
+                <li><i class="fa fa-location-arrow contactIcons"></i>&nbsp; 3904 The Platinum Tower, Jumeriah Lakes Towers, Dubai</li>
+                <li><i class="fa fa-envelope-o contactIcons"></i>&nbsp; <a href="mailto:info@henleymc.com">info@henleymc.com</a></li>
+                <li><i class="fa fa-phone contactIcons"></i>&nbsp; +971 4 552 1602</li>
+        </ul>
         </div>
     </div>
+        <div class="col-xs-12">
+            <h4 class="title">Enquiry form</h4>
+            ^tmp_pb_contact_form_contact^
+        </div>
+</div>
+</div>
 ^tmp_footer^
 
 
-<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
-<script type="text/javascript"> 
-    function init_map(){var myOptions = {zoom:17,center:new google.maps.LatLng(40.805478,-73.96522499999998),
-            mapTypeId: google.maps.MapTypeId.ROADMAP};
-        map = new google.maps.Map(document.getElementById("gmap_canvas"), myOptions);
-        marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(40.805478, -73.96522499999998)});
-        infowindow = new google.maps.InfoWindow({content:"<b>The Breslin</b><br/>2880 Broadway<br/> New York" });
-        google.maps.event.addListener(marker, "click", function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);
+
+
+<script src='https://maps.googleapis.com/maps/api/js?key=&sensor=false&extension=.js'></script> 
+ 
+<script> 
+    google.maps.event.addDomListener(window, 'load', init);
+    var map;
+    function init() {
+        var mapOptions = {
+            center: new google.maps.LatLng(25.067913,55.147618),
+            zoom: 15,
+            zoomControl: true,
+            zoomControlOptions: {
+                style: google.maps.ZoomControlStyle.SMALL,
+            },
+            disableDoubleClickZoom: true,
+            mapTypeControl: false,
+            scaleControl: false,
+            scrollwheel: false,
+            panControl: false,
+            streetViewControl: true,
+            draggable : true,
+            overviewMapControl: false,
+            overviewMapControlOptions: {
+                opened: false,
+            },
+            mapTypeId: google.maps.MapTypeId.ROADMAP,
+            styles: [{"featureType":"administrative","stylers":[{"visibility":"off"}]},{"featureType":"poi","stylers":[{"visibility":"simplified"}]},{"featureType":"road","elementType":"labels","stylers":[{"visibility":"simplified"}]},{"featureType":"water","stylers":[{"visibility":"simplified"}]},{"featureType":"transit","stylers":[{"visibility":"simplified"}]},{"featureType":"landscape","stylers":[{"visibility":"simplified"}]},{"featureType":"road.highway","stylers":[{"visibility":"off"}]},{"featureType":"road.local","stylers":[{"visibility":"on"}]},{"featureType":"road.highway","elementType":"geometry","stylers":[{"visibility":"on"}]},{"featureType":"water","stylers":[{"color":"#84afa3"},{"lightness":52}]},{"stylers":[{"saturation":-17},{"gamma":0.36}]},{"featureType":"transit.line","elementType":"geometry","stylers":[{"color":"#3f518c"}]}],
+        }
+        var mapElement = document.getElementById('gmap-canvas');
+        var map = new google.maps.Map(mapElement, mapOptions);
+        var locations = [
+['Henley Management Centre', 'undefined', '+971 4 552 1602', 'info@henleymc.com', 'www.henleymc.com', 25.069058, 55.142928, 'https://mapbuildr.com/assets/img/markers/default.png']
+        ];
+        for (i = 0; i < locations.length; i++) {
+            if (locations[i][1] =='undefined'){ description ='';} else { description = locations[i][1];}
+            if (locations[i][2] =='undefined'){ telephone ='';} else { telephone = locations[i][2];}
+            if (locations[i][3] =='undefined'){ email ='';} else { email = locations[i][3];}
+           if (locations[i][4] =='undefined'){ web ='';} else { web = locations[i][4];}
+           if (locations[i][7] =='undefined'){ markericon ='';} else { markericon = locations[i][7];}
+            marker = new google.maps.Marker({
+                icon: markericon,
+                position: new google.maps.LatLng(locations[i][5], locations[i][6]),
+                map: map,
+                title: locations[i][0],
+                desc: description,
+                tel: telephone,
+                email: email,
+                web: web
+            });
+if (web.substring(0, 7) != "http://") {
+link = "http://" + web;
+} else {
+link = web;
+}
+            bindInfoWindow(marker, map, locations[i][0], description, telephone, email, web, link);
+     }
+ function bindInfoWindow(marker, map, title, desc, telephone, email, web, link) {
+      var infoWindowVisible = (function () {
+              var currentlyVisible = false;
+              return function (visible) {
+                  if (visible !== undefined) {
+                      currentlyVisible = visible;
+                  }
+                  return currentlyVisible;
+               };
+           }());
+           iw = new google.maps.InfoWindow();
+           google.maps.event.addListener(marker, 'click', function() {
+               if (infoWindowVisible()) {
+                   iw.close();
+                   infoWindowVisible(false);
+               } else {
+                   var html= "<div style='color:#000;background-color:#fff;padding:5px;width:300px;'><h4>"+title+"</h4><p>"+telephone+"<p><a href='mailto:"+email+"' >"+email+"<a><a href='"+link+"'' >"+web+"<a></div>";
+                   iw = new google.maps.InfoWindow({content:html});
+                   iw.open(map,marker);
+                   infoWindowVisible(true);
+               }
+        });
+        google.maps.event.addListener(iw, 'closeclick', function () {
+            infoWindowVisible(false);
+        });
+ }
+}
 </script>
