--- a/plugins/portfolio/templates/elements/top_menu.html
+++ b/plugins/portfolio/templates/elements/top_menu.html
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a id="navbar_brand" class="navbar-brand" href="^site_root^">
-                <img src="^site_logo^"></img>
+                <img class="logo-nav" src="^site_logo^"></img>
             </a>
         </div>
 
@@ -20,3 +20,9 @@
         </div>
     </div>
 </nav>
+
+<script>
+    $(".nav>li>a").click(function() {
+        localStorage.clear();
+    });
+</script>
