--- a/plugins/portfolio/templates/landing_page.html
+++ b/plugins/portfolio/templates/landing_page.html
@@ -1,4 +1,5 @@
 ^tmp_head^
+    <div class="headerborder"></div>
     <div class="hero">
         <img class="hero_bg" src="^hero_image^"></img>
         <div class="hero_callouts black_75" style="^display_callouts^">
