--- a/plugins/portfolio/templates/elements/accreditations.html
+++ b/plugins/portfolio/templates/elements/accreditations.html
@@ -1,5 +1,5 @@
 <div class="col-xs-12">
-    <h3 class="title">Accreditations</h3>
+    <h3 class="title">HMC Accreditations</h3>
 </div>
 <div class="col-xs-2"><img style="max-height: 80px;" class="img-responsive" src="/img/accreditations/cmi_logo.png"></div>
 <div class="col-xs-2"><img style="max-height: 80px;" class="img-responsive" src="/img/accreditations/cilt_logo.png"></div>
