--- a/plugins/portfolio/templates/elements/call_to_action.html
+++ b/plugins/portfolio/templates/elements/call_to_action.html
@@ -3,6 +3,6 @@
 <a class="btn btn-default btn-lg btn-block redHollow" href="/section/courses" role="button"><i class="fa fa-folder-open"></i> COURSE CATALOG</a><br />
 </div>
 <div class="col-xs-12 col-sm-6">
-<a class="btn btn-default btn-lg btn-block redHollow" href="/section/search" role="button"><i class="fa fa-search"></i> FIND A COURSE</a><br />
+<a class="btn btn-default btn-lg btn-block redHollow" href="/search" role="button"><i class="fa fa-search"></i> FIND A COURSE</a><br />
 </div>
 </div>
