--- a/plugins/portfolio/templates/search.html
+++ b/plugins/portfolio/templates/search.html
@@ -4,13 +4,13 @@
     	<div class="col-xs-12">
     		<h3 class="title">Search courses</h3>
 	</div>
-		<div class="col-xs-3">
+		<div class="col-xs-12 col-sm-3">
 		    <h4 class="title">Course area</h4>
 		    <div class="col-xs-12">
             	<eui-singleselect field="'meta_keywords'" size="10" class="sideFind"></eui-checklist>
 	</div>
 	</div>
-        <div class="col-xs-7">
+        <div class="col-xs-12 col-sm-7">
         	<span class="searchby">Search by course name, skill, field or course code</span>
         	<eui-searchbox field="'headline'" class="quickFind"></eui-searchbox>
         	<h3 class="noTop">&nbsp;Courses found</h3>
@@ -22,7 +22,7 @@
                 <!--<eui-simple-paging></eui-simple-paging>-->
     </div>
 
-    			<div class="col-xs-2">
+    			<div class="col-xs-12 col-sm-2">
 		    <h4 class="title">Location</h4>
 		    <div class="col-xs-12">
             	<eui-singleselect field="'subheading'" size="10" class="sideFind"></eui-checklist>
