--- a/plugins/portfolio/templates/elements/front_photos.html
+++ b/plugins/portfolio/templates/elements/front_photos.html
@@ -1,26 +1,26 @@
 <div class="row">
 	<div class="col-xs-6 col-sm-3">
 		<div class="col-xs-12 text-center photoTitle noPad">
-			<p class="mTop">Customised Training</p>
+			<a href="/about/customised"><p class="mTop">Customised Training</p></a>
 	</div>
 		<div class="col-xs-12 bw pic noPad">
-  			<img class="img-responsive" src="/img/front_first.jpg" alt="beach"><br />
+  			<a href="/about/customised"><img class="img-responsive" src="/img/front_first.jpg" alt="beach"></a><br />
   	</div>
 </div>
 	<div class="col-xs-6 col-sm-3">
 		<div class="col-xs-12 text-center photoTitle noPad">
-			<p class="mTop">Continued Support</p>
+			<a href="/contact/support"><p class="mTop">Continued Support</p></a>
 	</div>
 		<div class="col-xs-12 bw pic noPad">
-  			<img class="img-responsive" src="/img/front_second.jpg" alt="beach"><br />
+  			<a href="/contact/support"><img class="img-responsive" src="/img/front_second.jpg" alt="beach"></a><br />
   	</div>
 </div>
 	<div class="col-xs-6 col-sm-3">
 		<div class="col-xs-12 text-center photoTitle noPad">
-			<p class="mTop">Unique Approach</p>
+			<a href="/about/approach"><p class="mTop">Unique Approach</p></a>
 	</div>
 		<div class="col-xs-12 bw pic noPad">
-  			<img class="img-responsive" src="/img/front_third.jpg" alt="beach"><br />
+  			<a href="/about/approach"><img class="img-responsive" src="/img/front_third.jpg" alt="beach"></a><br />
   	</div>
 </div>
 	<div class="col-xs-6 col-sm-3">
