--- a/plugins/portfolio/templates/head.html
+++ b/plugins/portfolio/templates/head.html
@@ -36,3 +36,10 @@
     <body ng-controller="PencilBlueController" eui-index="'courses'">
         <div id="wrap">
             ^tmp_elements=top_menu^
+            <!--[if lte IE 9]>
+    <div class="row">
+    <div class="col-xs-12">
+    <h4>Your browser is NOT SUPPORTED. This website will not work correctly with Internet Explorer 9 and earlier. Please update to Internet Explorer 10 or later.
+    </div>
+    </div>
+<![endif]-->
