--- a/plugins/portfolio/templates/elements/article.html
+++ b/plugins/portfolio/templates/elements/article.html
@@ -2,9 +2,29 @@
     <h1 id="coursetitle">^article_headline^</h1>
     <h3 style="^article_subheading_display^">^article_subheading^</h3>
     ^tmp_elements=book_now_inline^
+    <div class="col-xs-12 time-hide-courses">
+    	<hr>
+    </div>
     <div class="article_body">
         ^tmp_elements=article=byline^
-        <div class="timestamp" style="^article_timestamp_display^">Start dates: ^article_timestamp^ / ^article_timestamp2^</div>
+        <div class="timestamp time-hide-article" style="^article_timestamp_display^">Start dates: <span id="T1S">^article_timestamp^</span><span id="T2S"> / ^article_timestamp2^</span><span id="T3S"> / ^article_timestamp3^</span><span id="T4S"> / ^article_timestamp4^</span></div>
+        <div class="col-xs-12 time-hide-courses">
+        	<div class="col-xs-3 timestamp" id="T1D">
+        		<input class="timestamp" id="T1" type="radio" name="date" value="^article_timestamp^"> ^article_timestamp^
+        	</div>
+        	<div class="col-xs-3 timestamp" id="T2D">
+        		<input class="timestamp" id="T2" type="radio" name="date" value="^article_timestamp2^"> ^article_timestamp2^
+        	</div>
+        	<div class="col-xs-3 timestamp" id="T3D">
+        		<input class="timestamp" id="T3" type="radio" name="date" value="^article_timestamp3^"> ^article_timestamp3^
+        	</div>
+        	<div class="col-xs-3 timestamp" id="T4D">
+        		<input class="timestamp" id="T4" type="radio" name="date" value="^article_timestamp4^"> ^article_timestamp4^
+        	</div>
+        </div>
+        <div class="col-xs-12 time-hide-courses">
+        	<hr>
+        </div>
         ^article_layout^
     </div>
     ^comments^
@@ -15,6 +35,13 @@
 $("#book_^article_id^, #bookInside").click(function() {
   title = $('div#article_^article_id^ > h1').text();
   localStorage.setItem('course', title);
+});
+</script>
+
+<script>
+$(".timestamp").click(function() {
+  timestamp = $( "input:radio[name=date]:checked" ).val();
+  localStorage.setItem('date', timestamp);
 });
 </script>
 
@@ -30,5 +57,40 @@ $("#requestCall").click(function() {
 <script type="text/javascript">
 if (window.location.href.indexOf("courses") != -1) {
 $(".hideBook").hide();
+$(".time-hide-courses").hide();
 }
+</script>
+
+<script type="text/javascript">
+if (window.location.href.indexOf("/article/") != -1) {
+$(".time-hide-article").hide();
+}
+</script>
+
+<script type="text/javascript">
+if ($("#article_^article_id^>div>div>div>input:radio[id=T1]").val() === "January 1, 1970") {
+	$("#article_^article_id^ > div > div > div#T1D").hide();
+	$("#article_^article_id^ > div > div > span#T1S").hide();
+};
+</script>
+
+<script type="text/javascript">
+if ($("#article_^article_id^>div>div>div>input:radio[id=T2]").val() === "January 1, 1970") {
+	$("#article_^article_id^ > div > div > div#T2D").hide();
+	$("#article_^article_id^ > div > div > span#T2S").hide();
+};
+</script>
+
+<script type="text/javascript">
+if ($("#article_^article_id^>div>div>div>input:radio[id=T3]").val() === "January 1, 1970") {
+	$("#article_^article_id^ > div > div > div#T3D").hide();
+	$("#article_^article_id^ > div > div > span#T3S").hide();
+};
+</script>
+
+<script type="text/javascript">
+if ($("#article_^article_id^>div>div>div>input:radio[id=T4]").val() === "January 1, 1970") {
+	$("#article_^article_id^ > div > div > div#T4D").hide();
+	$("#article_^article_id^ > div > div > span#T4S").hide();
+};
 </script>
