ILM and BAC was added. Target blank was set for callouts. Accreditations about page was completed. Phone on contact page was made mandatory.

--- a/plugins/contact-pencilblue-contact/templates/pb_contact_form_contact.html
+++ b/plugins/contact-pencilblue-contact/templates/pb_contact_form_contact.html
@@ -3,7 +3,7 @@
     <label for="pb_contact_course">^loc_COURSE^</label>
     <input type="text" id="pb_contact_course" name="pb_contact_course" class="form-control"></input>
   </div>
-  <div class="form-group">
+  <div class="form-group required">
     <label for="pb_contact_name">^loc_NAME^</label>
     <input type="text" id="pb_contact_name" name="pb_contact_name" class="form-control" required></input>
   </div>
@@ -15,15 +15,15 @@
     <label for="pb_contact_address">^loc_ADDRESS^</label>
     <input type="text" id="pb_contact_address" name="pb_contact_address" class="form-control"></input>
   </div>
-  <div class="form-group">
+  <div class="form-group required">
     <label for="pb_contact_phone">^loc_PHONE^</label>
-    <input type="text" id="pb_contact_phone" name="pb_contact_phone" class="form-control"></input>
+    <input type="text" id="pb_contact_phone" name="pb_contact_phone" class="form-control" required></input>
   </div>
-  <div class="form-group">
+  <div class="form-group required">
     <label for="pb_contact_email">^loc_EMAIL^</label>
     <input type="email" id="pb_contact_email" name="pb_contact_email" class="form-control" required></input>
   </div>
-  <div class="form-group">
+  <div class="form-group required">
     <label for="pb_contact_comment">^loc_COMMENT^</label>
     <textarea id="pb_contact_comment" name="pb_contact_comment" class="form-control" style="min-height: 100px" required></textarea>
   </div>
