--- a/plugins/contact-pencilblue/templates/pb_contact_form.html
+++ b/plugins/contact-pencilblue/templates/pb_contact_form.html
@@ -12,32 +12,32 @@
     <div class="spacer"></div>
   </div>
 </div>
-<form id="pb_contact_form">
+<form id="pb_contact_form required">
   <div class="form-group">
     <label for="pb_contact_course">^loc_COURSE^</label>
     <input type="text" id="pb_contact_course" name="pb_contact_course" class="form-control" required></input>
   </div>
-    <div class="form-group">
+    <div class="form-group required">
     <label for="pb_contact_date">^loc_DATE^</label>
     <input type="text" id="pb_contact_date" name="pb_contact_date" class="form-control" required></input>
   </div>
-  <div class="form-group">
+  <div class="form-group required">
     <label for="pb_contact_name">^loc_NAME^</label>
     <input type="text" id="pb_contact_name" name="pb_contact_name" class="form-control" required></input>
   </div>
-  <div class="form-group">
+  <div class="form-group required">
     <label for="pb_contact_company">^loc_COMPANY^</label>
     <input type="text" id="pb_contact_company" name="pb_contact_company" class="form-control" required></input>
   </div>
-  <div class="form-group">
+  <div class="form-group required">
     <label for="pb_contact_address">^loc_ADDRESS^</label>
     <input type="text" id="pb_contact_address" name="pb_contact_address" class="form-control" required></input>
   </div>
-  <div class="form-group">
+  <div class="form-group required">
     <label for="pb_contact_phone">^loc_PHONE^</label>
     <input type="text" id="pb_contact_phone" name="pb_contact_phone" class="form-control" required></input>
   </div>
-  <div class="form-group">
+  <div class="form-group required">
     <label for="pb_contact_email">^loc_EMAIL^</label>
     <input type="email" id="pb_contact_email" name="pb_contact_email" class="form-control" required></input>
   </div>
