--- a/plugins/portfolio/templates/about_accreditations.html
+++ b/plugins/portfolio/templates/about_accreditations.html
@@ -18,16 +18,16 @@
 			<p>We are clear that quality underlines everything that we do and we aim to deliver excellence as a minimum standard to our clients.</p>
 		</div>
 		<div class="col-xs-12 bs-callout bs-callout-danger">
-			<h4>Generating Ideas</h4>
-			<p>We are clear that quality underlines everything that we do and we aim to deliver excellence as a minimum standard to our clients.</p>
+			<h4>Strength and Pragmatism</h4>
+			<p>We are proud to deliver a practical unique approach to learning founded on knowledge, strength and a highly diverse and practical training team.</p>
 		</div>
 		<div class="col-xs-12 bs-callout bs-callout-danger">
-			<h4>Generating Ideas</h4>
-			<p>We are clear that quality underlines everything that we do and we aim to deliver excellence as a minimum standard to our clients.</p>
+			<h4>Respect and Tolerance</h4>
+			<p>We respect the ideas, opinions and beliefs of others and above all we value the cultural diversity of our global client base.</p>
 		</div>
 		<div class="col-xs-12 bs-callout bs-callout-danger">
-			<h4>Generating Ideas</h4>
-			<p>We are clear that quality underlines everything that we do and we aim to deliver excellence as a minimum standard to our clients.</p>
+			<h4>Boldness and Innovation</h4>
+			<p>We seek to challenge, change and improve all that we do and encourage those who attend our courses to do the same.</p>
 		</div>
 		 <div class="col-xs-12">
 		 	<hr>
