--- a/plugins/portfolio/templates/customer_support.html
+++ b/plugins/portfolio/templates/customer_support.html
@@ -227,6 +227,20 @@
 				</div>
 			</div>
 		</div>
+		<div class="panel panel-default">
+			<div class="panel-heading" role="tab" id="headingSixteen">
+				<h4 class="panel-title">
+				<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSixteen" aria-expanded="false" aria-controls="collapseSixteen">
+					Duration and cost
+				</a>
+				</h4>
+			</div>
+			<div id="collapseSixteen" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSixteen">
+				<div class="panel-body">
+					All of our courses have a duration of five days. Most of our courses have a fixed cost of either $4,200 or $4,500.
+				</div>
+			</div>
+		</div>
 	</div>
 	<div class="col-xs-12">
 		<hr>
