--- a/plugins/portfolio/templates/elements/article.html
+++ b/plugins/portfolio/templates/elements/article.html
@@ -7,11 +7,8 @@
     </div>
     <div class="article_body">
         ^tmp_elements=article=byline^
-        <div class="timestamp time-hide-article" style="^article_timestamp_display^">Start dates: <span id="T1S">^article_timestamp^</span><span id="T2S"> / ^article_timestamp2^</span><span id="T3S"> / ^article_timestamp3^</span><span id="T4S"> / ^article_timestamp4^</span></div>
+        <div class="timestamp time-hide-article" style="^article_timestamp_display^">Start dates: <span id="T2S">^article_timestamp2^</span><span id="T3S"> / ^article_timestamp3^</span><span id="T4S"> / ^article_timestamp4^</span><span id="T5S"> / ^article_timestamp5^</span></div>
         <div class="col-xs-12 time-hide-courses">
-        	<div class="col-xs-3 timestamp" id="T1D">
-        		<input class="timestamp" id="T1" type="radio" name="date" value="^article_timestamp^"> ^article_timestamp^
-        	</div>
         	<div class="col-xs-3 timestamp" id="T2D">
         		<input class="timestamp" id="T2" type="radio" name="date" value="^article_timestamp2^"> ^article_timestamp2^
         	</div>
@@ -20,6 +17,9 @@
         	</div>
         	<div class="col-xs-3 timestamp" id="T4D">
         		<input class="timestamp" id="T4" type="radio" name="date" value="^article_timestamp4^"> ^article_timestamp4^
+        	</div>
+        	<div class="col-xs-3 timestamp" id="T5D">
+        		<input class="timestamp" id="T5" type="radio" name="date" value="^article_timestamp5^"> ^article_timestamp5^
         	</div>
         </div>
         <div class="col-xs-12 time-hide-courses">
@@ -92,5 +92,12 @@ if ($("#article_^article_id^>div>div>div>input:radio[id=T3]").val() === "January
 if ($("#article_^article_id^>div>div>div>input:radio[id=T4]").val() === "January 1, 1970") {
 	$("#article_^article_id^ > div > div > div#T4D").hide();
 	$("#article_^article_id^ > div > div > span#T4S").hide();
+};
+</script>
+
+<script type="text/javascript">
+if ($("#article_^article_id^>div>div>div>input:radio[id=T5]").val() === "January 1, 1970") {
+	$("#article_^article_id^ > div > div > div#T5D").hide();
+	$("#article_^article_id^ > div > div > span#T5S").hide();
 };
 </script>
