--- a/plugins/portfolio/templates/approach.html
+++ b/plugins/portfolio/templates/approach.html
@@ -16,7 +16,7 @@
 		<div class="col-xs-12 col-sm-8 right-col">
 			<div class="col-xs-12 bs-callout bs-callout-danger">
 				<h4>Assess</h4>
-				<p>We work with delegates to establish their own objectives and aspirations to ensure they gain the skills required and truly benefit form the course.</p>
+				<p>We work with delegates to establish their own objectives and aspirations to ensure they gain the skills required and truly benefit from the course.</p>
 			</div>
 			<div class="col-xs-12 bs-callout bs-callout-danger">
 				<h4>Inspire</h4>
