--- a/plugins/portfolio/templates/contact_page.html
+++ b/plugins/portfolio/templates/contact_page.html
@@ -8,7 +8,7 @@
             <h4 class="title">Contact information</h4>
             <div class="col-xs-12">
             <ul class="list-unstyled">
-                <li><i class="fa fa-location-arrow contactIcons"></i>&nbsp; 3904 The Platinum Tower, Jumeriah Lakes Towers, Dubai</li>
+                <li><i class="fa fa-location-arrow contactIcons"></i>&nbsp; Unit AG-PF-301, Jumeriah Lakes Towers, Dubai</li>
                 <li><i class="fa fa-envelope-o contactIcons"></i>&nbsp; <a href="mailto:info@henleymc.com">info@henleymc.com</a></li>
                 <li><i class="fa fa-phone contactIcons"></i>&nbsp; +971 4 552 1602</li>
         </ul>
