--- a/plugins/portfolio/templates/search.html
+++ b/plugins/portfolio/templates/search.html
@@ -7,7 +7,7 @@
 		<div class="col-xs-12 col-sm-3">
 		    <h4 class="title">Course area</h4>
 		    <div class="col-xs-12">
-            	<eui-singleselect field="'meta_keywords'" size="10" class="sideFind"></eui-checklist>
+            	<eui-singleselect field="'meta_keywords'" size="10" class="sideFind capitalsHR"></eui-checklist>
 	</div>
 	</div>
         <div class="col-xs-12 col-sm-7">
