price duration list

--- a/plugins/portfolio/templates/elements/article.html
+++ b/plugins/portfolio/templates/elements/article.html
@@ -8,6 +8,7 @@
     <div class="article_body">
         ^tmp_elements=article=byline^
         <div class="timestamp time-hide-article" style="^article_timestamp_display^">Start dates: <span id="T2S">^article_timestamp2^</span><span id="T3S"> / ^article_timestamp3^</span><span id="T4S"> / ^article_timestamp4^</span><span id="T5S"> / ^article_timestamp5^</span></div>
+        <div class="timestamp time-hide-article" style="^article_timestamp_display^"><span>Duration: </span><span>^article_duration^</span><span> | Price: </span><span>^article_price^</span></div>
         <div id="duration" class="col-xs-5 time-hide-courses priceDuration">
         <span>Duration: </span><span>^article_duration^</span>
         </div>
