--- a/plugins/portfolio/public/css/global.css
+++ b/plugins/portfolio/public/css/global.css
@@ -1,24 +1,31 @@
 .priceDuration {
-    text-align: center;
+    text-align: left;
     font-weight: bold;
-    color: #FFFFFF;
+    color: #CB1A1C;
+}
+
+#priceText {
+    font-weight: 400;
+    color: #888888;
+}
+
+#durationText {
+    font-weight: 400;
+    color: #888888;
 }
 
 #duration {
  text-align: left;
- background-color: #CB1A1C;
 }
 
 #price {
  text-align: left;
- background-color: #CB1A1C;
 }
 
 .startDates {
-    text-align: center;
+    text-align: left;
     font-weight: bold;
     color: #CB1A1C;
-    font-size: 16px;
 }
 
 a:hover, a:focus {
