--- a/plugins/portfolio/templates/head.html
+++ b/plugins/portfolio/templates/head.html
@@ -38,7 +38,7 @@
     var fc = document.createElement('link'); fc.type = 'text/css'; fc.rel = 'stylesheet';
     fc.href = 'https://product.feedbacklite.com/feedbacklite.css'; h.appendChild(fc);
     })();
-    var fbl = {'campaign':{'id':1139, 'type':3, 'size':1, 'body':'666666', 'position':6, 'tab':1, 'control':1}};
+    var fbl = {'campaign':{'id':1140, 'type':3, 'size':1, 'position':5, 'tab':5, 'control':1, 'auto':1, 'auto_delay':30000, 'auto_expiry':3600000}};
     (function(){
     var fj = document.createElement('script'); fj.type = 'text/javascript';
     fj.async = true; fj.src = 'https://product.feedbacklite.com/feedbacklite.js'; h.appendChild(fj);
