--- a/plugins/portfolio/templates/elements/front_photos.html
+++ b/plugins/portfolio/templates/elements/front_photos.html
@@ -25,7 +25,7 @@
 </div>
 	<div class="col-xs-6 col-sm-3">
 		<div class="col-xs-12 text-center photoTitle noPad">
-			<p class="mTop">British Standard</p>
+			<p class="mTop">Development Library</p>
 	</div>
 		<div class="col-xs-12 bw pic noPad">
   			<img class="img-responsive" src="/img/front_four.jpg" alt="beach"><br />
