--- a/plugins/portfolio/templates/elements/side_nav/related_articles.html
+++ b/plugins/portfolio/templates/elements/side_nav/related_articles.html
@@ -1,4 +1,4 @@
-<h4>^loc_RELATED_ARTICLES^</h4>
+<h4>^loc_RELATED_COURSES^</h4>
 <ul class="nav nav-pills nav-stacked">
     <li ng-repeat="item in sideNavItems" ng-cloak>
         <a ng-href="/article/{{item.url}}">{{item.headline}}</a>
