--- a/plugins/portfolio/templates/customised.html
+++ b/plugins/portfolio/templates/customised.html
@@ -36,7 +36,7 @@
 		<div class="col-xs-12 text-center">
 		<a href="/contact"><button type="submit" id="pb_contact_submit_contact" class="btn btn-primary widthBTN">
     		<span id="pb_contact_spinner">
-    			<i class="fa fa-circle-o-notch fa-spin"></i>&nbsp;
+    			<i class="fa fa-envelope"></i>&nbsp;
     	</span>
   		Contact us today
   </button></a>
